# ai-mentalist

./: .env.example  .gitignore  README.md  app.py  ingest.py  pyproject.toml
src/: chain.py  config.py  indexer.py  ocr.py
